Club update endpoint
