# public/swagger.json
@@ -483,6 +483,39 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"UpdateClubRequest": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"address": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"city": {
+						"type": "string"
+					},
+					"country": {
+						"type": "string"
+					},
+					"courts": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"name",
+					"address",
+					"description",
+					"city",
+					"country",
+					"courts"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"CourtCreateRequest": {
 				"properties": {
 					"name": {
@@ -1495,6 +1528,45 @@
 						}
 					}
 				]
+			},
+			"patch": {
+				"operationId": "UpdateClub",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Clubs"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "entityId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateClubRequest"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/courts/all": {
