# src/requests/updateClubRequest.ts
@@ -1,0 +1,9 @@
+
+export default interface UpdateClubRequest {
+    name: string;
+    address: string;
+    description: string;
+    city: string;
+    country: string;
+    courts: number;
+}
